# SlopScan

./: .pre-commit-hooks.yaml  .vibeguard.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  _test2.txt  action.yml  pyproject.toml  vg-test-output.json
.github/workflows/: ci.yml  dogfood.yml  publish.yml
docs/: RECORDING.md  codeinferenceaslyw1.txt  codeinferenceeaslyw2latest.txt  demo.tape  esp32memory.txt  sign_model.h
docs/latestmodelandprechatgptonesnotwanted/: preprocessing.h  sign_model.h
src/vibeguard/: cli.py  config.py
src/vibeguard/ai/: __init__.py
src/vibeguard/commands/: __init__.py  init.py  rules.py  score.py
src/vibeguard/plugins/: base.py  dotenv_scanner.py  mcp_config.py  prompt_injection.py  sca.py  secrets.py
src/vibeguard/reporters/: json_out.py  sarif.py  terminal.py
tests/: test_cli.py  test_plan2_ai.py  test_plan2_plugins.py  test_reporters.py  test_scanner.py
